fixing search spacing, adding some event date styling

--- a/assets/styles/components/_grid.scss
+++ b/assets/styles/components/_grid.scss
@@ -15,6 +15,19 @@
   overflow: hidden;
 }
 
+// Content layout
+
+.right-sidebar {
+  > .widget {
+    // First widget in sidebar, get rid of header margin
+    &:first-child {
+      & > h3 {
+        margin-top: 0;
+      }
+    }
+  }
+}
+
 
 // Mobile only
 // -------------------------
